--- a/code1_install_env/fit_quadratic.ipynb
+++ b/code1_install_env/fit_quadratic.ipynb
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internvl",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +271,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7d2cfb1e010eacc9d1833061fead5992395503aef0fba5ffab510ab5f37dcdc8"
+   }
   }
  },
  "nbformat": 4,
